@@ -60,6 +60,9 @@ OPTIMIZATIONS
 
 BUG FIXES
 
+PIG-4947: LOAD with HBaseStorage using a mix of pure wildcards and prefixed wildcards results
+  in empty maps for the pure wildcarded column families (daijy)
+
 PIG-4948: Pig on Tez AM use too much memory on a small cluster (daijy)
 
 PIG-4949: Fix registering jar in S3 which was broken by PIG-4417 in Pig 0.16 (yangyishan0901m via daijy)
